2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix NumericQuadraticFunction / NumericLinearFunction.
	* include/liboptimization/linear-function.hh: Compute hessian.
	* include/liboptimization/numeric-linear-function.hh: Remove
        hessian computation.
	* include/liboptimization/numeric-quadratic-function.hh: Use
        a symmetric matrix.
	* src/linear-function.cc: Compute hessian.
	* src/numeric-linear-function.cc: Move hessian computation in
        LinearFunction.
	* src/numeric-quadratic-function.cc: Fix computation bugs.
	* tests/numeric-quadratic-function.cc: Fix test case
        to use a symmetric matrix.
	* tests/numeric-quadratic-function.stdout: Update reference.

2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Add explicit error message in IPOPT.
	* include/liboptimization/result-with-warnings.hh: Use
        a direct instance of SolverWarning for now.
	* include/liboptimization/solver-warning.hh: Add missing public.
	* src/ipopt.cc: Return an explicit error message if a problem
        occurs.

2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fill SolverError with a complete message in CFSQP bridge.
	* src/cfsqp.cc: Put a real error message into returned SolverErro.
	* src/ipopt.cc: Enfore 80 columns.
	* tests/cfsqp.cc: Print error if necessary.
	* tests/cfsqp.stdout: Regenerate output.
	* tests/ipopt.cc: Print error if necessary.
	* tests/simple-test.cc: Print returned error.
	* tests/simple-test.stdout: Regenerate output.

2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix documentation style.
	* doc/Doxyfile.in: Add new stylesheets.
        Remove collaboration diagram.
	* doc/Makefile.am: Distribute new stylesheets.
	* doc/doxygen.css: New.
	* doc/tabs.css: New.

2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Add m in Function (represents the result's size).
	* include/Makefile.am: Distribute new headers.
	* include/liboptimization/derivable-function.hh:
        Add m to constructor.