@@ -1,3 +1,8 @@
+2009-04-14  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Use more precise failure messages in Ipopt bridge.
+	* src/ipopt.cc: Here.
+
 2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix NumericQuadraticFunction / NumericLinearFunction.
